# kinova-ros

./: README.md
kinova_bringup/launch/: kinova_robot.launch
kinova_description/launch/: display_kinova_robot.launch
kinova_description/urdf/: j2n6s300_standalone.xacro.ori  kinova_common.xacro
kinova_moveit/inverse_kinematics_plugins/ikfast/j2n6s300_ikfast/: CMakeLists.txt
kinova_moveit/inverse_kinematics_plugins/ikfast/j2s7s300_ikfast/: CMakeLists.txt
kinova_moveit/inverse_kinematics_plugins/ikfast/m1n6s300_ikfast/: CMakeLists.txt
kinova_moveit/kinova_arm_moveit_demo/: CMakeLists.txt
kinova_moveit/robot_configs/j2n6s300_moveit_config/: CMakeLists.txt
kinova_moveit/robot_configs/j2n6s300_moveit_config/launch/: move_group_j2n6s300.launch  planning_context.launch  trajectory_execution.launch.xml
kinova_moveit/robot_configs/j2s7s300_moveit_config/: CMakeLists.txt
kinova_moveit/robot_configs/m1n6s300_moveit_config/: CMakeLists.txt
